# sim-datasets

./: .gitignore  README.md  install.py  pyproject.toml  test_basic.py
src/sim_datasets/: __init__.py  __main__.py  utils.py
src/sim_datasets/configs/: bio_pop_growth.txt  blackbox.txt  classic-benchmarks.keijzer.txt  classic-benchmarks.korns.txt  classic-benchmarks.nguyen.txt  classic-benchmarks.txt  classic-benchmarks.vladislavleva.txt  keijzer.txt  korns.txt  llm-srbench.chem_react.txt  llm-srbench.phys_osc.txt  llm-srbench.txt  lsrtransform.txt  matsci.txt  nguyen.txt  srbench1.0.feynman.txt  srbench1.0.strogatz.txt  srbench1.0.txt  srbench2025.blackbox.txt  srbench2025.firstprinciples.txt  srbench2025.txt  srsd-feynman_easy_dummy.txt  srsd-feynman_medium.txt  srsd.srsd-feynman_easy.txt  srsd.srsd-feynman_hard.txt  srsd.srsd-feynman_hard_dummy.txt  srsd.srsd-feynman_medium_dummy.txt  srsd.txt  vladislavleva.txt
tests/: test_utils.py
