[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-datasets"
version = "0.1.0"
description = "A unified platform solution for symbolic regression, providing comprehensive support for Scientific-Intelligent-Modeling toolkits. Seamlessly integrates with ModelScope and Hugging Face for efficient dataset access."
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Ziwen Zhang", email = "244824379@qq.com"},
    {name = "Kai Li", email = "kai.li@ia.ac.cn"}
]
maintainers = [
    {name = "Ziwen Zhang", email = "244824379@qq.com"},
]
keywords = ["datasets", "symbolic regression", "scientific modeling", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]


[project.urls]
Homepage = "https://github.com/scientific-intelligent-modelling/scientific-intelligent-modelling"
Repository = "https://github.com/scientific-intelligent-modelling/scientific-intelligent-modelling"
Documentation = "https://github.com/scientific-intelligent-modelling/scientific-intelligent-modelling"
Issues = "https://github.com/scientific-intelligent-modelling/scientific-intelligent-modelling/issues"

[project.scripts]
sim-datasets = "sim_datasets.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sim_datasets"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

